Deixando alguns inputs e a textarea obrigatório

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 <h2>Qual domínio você quer para o seu site?</h2>
                 <p>Verifique se o domínio está disponível</p>
                 <form>
-                    <input type="text" name="domain" id="domain" placeholder="Digite o domínio desejado">
+                    <input type="text" name="domain" id="domain" placeholder="Digite o domínio desejado" required>
                     <input type="submit" value="Procurar domínio">
                 </form>
             </section>
@@ -143,9 +143,9 @@
                 <h2>Mande uma mensagem</h2>
                 <p>Envie a sua mensagem, em até 4 horas um especialista entrará em contato</p>
                 <form>
-                    <input type="text" name="name" id="name" placeholder="Seu nome">
-                    <input type="email" name="email" id="email" placeholder="Seu e-mail">
-                    <textarea name="desc" id="desc" placeholder="Descreva o que você precisa ou o seu projeto..."></textarea>
+                    <input type="text" name="name" id="name" placeholder="Seu nome" required>
+                    <input type="email" name="email" id="email" placeholder="Seu e-mail" required>
+                    <textarea name="desc" id="desc" placeholder="Descreva o que você precisa ou o seu projeto..." required></textarea>
                     <input type="submit" value="Enviar">
                 </form>
             </section>
